[package]
name = "cement"
version = "0.1.0"
authors = ["Dan Bruder <ddbruder@gmail.com>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
diesel = { version = "<= 1.2", features = ["sqlite", "r2d2"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
